# YesterdayQTL

./: CMakeLists.txt
cmake/: FindHTSlib.cmake  FindR.cmake  FindRmath.cmake
src/: data.h  management.cpp  readGenotypes.cpp  readGroups.cpp  readPhenotypes.cpp  region.h  residualizer.h  tabix.cpp  tabix.hpp
